# Eigenfaces

./: CMakeLists.txt  README.md
postprocessing/: .RData  .Rhistory  plotEnergy.R
preprocessing/: celeb.py  download.py
src/: best_five.cpp  celeb.cpp  eigenfaces.cpp  eigenfaces.hpp  energyVariation.cpp  main.cpp
